--- a/bower.json
+++ b/bower.json
@@ -14,7 +14,8 @@
   "devDependencies": {
     "angular-mocks": "~1.2.0",
     "angular-scenario": "~1.2.0",
-    "foundation": "~5.4.5"
+    "foundation": "~5.4.5",
+    "lodash": "~2.4.1"
   },
   "appPath": "app"
 }
