a little enhance to pagination, add language switch placeholder.

--- a/bower.json
+++ b/bower.json
@@ -16,7 +16,8 @@
     "angular-scenario": "~1.2.0",
     "foundation": "~5.4.5",
     "lodash": "~2.4.1",
-    "angular-i18n": "~1.2.25"
+    "angular-i18n": "~1.2.25",
+    "jquery": "1.10.2"
   },
   "appPath": "app"
 }
