--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "angular-i18n": "~1.2.25",
     "jquery": "1.10.2",
     "angular-translate": "~2.4.0",
-    "angular-translate-loader-static-files": "~2.4.0"
+    "angular-translate-loader-static-files": "~2.4.0",
+    "angular-translate-interpolation-messageformat": "~2.4.0",
+    "messageformat": "~0.2.1"
   },
   "appPath": "app"
 }
