--- a/package.json
+++ b/package.json
@@ -1,7 +1,10 @@
 {
   "name": "ngbrx",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "grunt-karma": "^0.9.0",
+    "karma": "^0.12.24"
+  },
   "devDependencies": {
     "connect-modrewrite": "^0.7.9",
     "grunt": "^0.4.1",
@@ -26,6 +29,8 @@
     "grunt-usemin": "^2.1.1",
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
+    "karma-chrome-launcher": "^0.1.5",
+    "karma-firefox-launcher": "^0.1.3",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
   },
