--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "grunt-wiredep": "^1.7.0",
     "jshint-stylish": "^0.2.0",
     "karma-chrome-launcher": "^0.1.5",
+    "karma-coverage": "^0.2.6",
     "karma-firefox-launcher": "^0.1.3",
     "load-grunt-tasks": "^0.4.0",
     "time-grunt": "^0.3.1"
